<resources>
    <string name="app_name">CHAT KOTLIN</string>
    <string name="item_logout">Logout</string>
    <string name="item_search">Search</string>
    <string name="item_settings">Settings</string>
    <string name="item_new_contact">New Contact</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>

    <!-- HINT -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_mail">E-mail</string>
    <string name="hint_send_message">send your message</string>

    <!-- TextView -->
    <string name="tv_signup">SIGN UP</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>