<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/item_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_logout"
        android:orderInCategory="200"
        android:title="@string/item_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="300"
        android:title="@string/item_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_addPerson"
        android:icon="@drawable/ic_add_person"
        android:orderInCategory="400"
        android:title="AddPerson"
        app:showAsAction="ifRoom" />
</menu>